--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div class="hero-unit">
 	<div class="row">
 		<div class="span6">
-			<h3>Ne courrez plus après le temps. Du tout.</h3>
+			<h3>Ne courez plus après le temps. Du tout.</h3>
 			<p>MyStaff.in est une approche simple, agréable et efficace de la gestion du temps. Remplir son TimeSheet devient enfin un plaisir !</p>
 			<% if user_signed_in? %>
 			<% else %>
