several updates, including first steps of analytics

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,6 +7,8 @@
 			<li><a href="/synthese/">Mon calendrier</a></li>
 			<li><a href="/board/">Tableau de bord</a></li>
 			<li class="divider-vertical"></li>
+			<li><a href="/statistics/">Statistiques</a></li>
+			<li><a href="/teams/">Equipes</a></li>
 		</ul>
 	</div>
 	<div class="nav-collapse">
