--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -30,7 +30,7 @@
 	</div>
   <% end %>
   <% if user_signed_in? %>
-    <% if current_user.is_admin?  %>
+    <% if current_user.admin?  %>
       <li>
       <%= link_to('Admin', '#') %>
       </li>
