--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,7 +9,20 @@
 			<li class="divider-vertical"></li>
 			<li><a href="/board/">Tableau de bord</a></li>
 			<li><a href="/statistics/">Indicateurs</a></li>
-			<li><a href="/teams/">Equipes</a></li>
+			<% if user_signed_in? %>
+		    	<% if current_user.has_role? :admin  %> 
+				<li class="divider-vertical"></li> 
+				<li class="dropdown">
+				  <a class="dropdown-toggle" data-toggle="dropdown" href="#">Administration
+				 <b class="caret"></b></a>
+				  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+				    <li><a href="/users/">Utilisateurs</a></li>
+					<li><a href="/teams/">Equipes</a></li>
+					<li><a href="/statuts/">Statuts</a></li>
+				  </ul>
+				</li>
+				<% end %>
+			<% end %>				
 		</ul>
 	</div>
 	<div class="nav-collapse">
@@ -28,11 +41,4 @@
 			<%= link_to('Connexion', new_user_session_path, :class => 'btn btn-success btn-small')  %>			
 		</div>
 	</div>
-  <% end %>
-  <% if user_signed_in? %>
-    <% if current_user.has_role? :admin  %>
-      <li>
-      <%= link_to('Admin', '#') %>
-      </li>
-    <% end %>
   <% end %>
