--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,7 +5,7 @@
 		<ul class="nav">
 			<li><a href="/dispos/new">Saisir</a></li>
 			<li><a href="/synthese/">Mon calendrier</a></li>
-			<li><a href="/#/">Mes statistiques</a></li>
+			<li><a href="/indicateurs/">Mes statistiques</a></li>
 			<li class="divider-vertical"></li>
 			<li><a href="/board/">Tableau de bord</a></li>
 			<li><a href="/statistics/">Indicateurs</a></li>
