--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,10 +5,10 @@
 		<ul class="nav">
 			<li><a href="/dispos/new">Saisir</a></li>
 			<li><a href="/synthese/">Mon calendrier</a></li>
-			<li><a href="/indicateurs/">Mes statistiques</a></li>
+			<li><a href="/statistics/">Mes statistiques</a></li>
 			<li class="divider-vertical"></li>
 			<li><a href="/board/">Tableau de bord</a></li>
-			<li><a href="/statistics/">Indicateurs</a></li>
+			<li><a href="/indicateurs/">Indicateurs</a></li>
 			<% if user_signed_in? %>
 		    	<% if current_user.has_role? :admin  %> 
 				<li class="divider-vertical"></li> 
