--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,7 +3,7 @@
   <% if user_signed_in? %>
 	<div class="nav-collapse">
 		<ul class="nav">
-			<li><a href="/dispos/new">Saisir</a></li>
+			<li><a href="/dispos/new">Saisir<b></b></a></li>
 			<li><a href="/synthese/">Mon calendrier</a></li>
 			<li><a href="/statistics/">Mes statistiques</a></li>
 			<li class="divider-vertical"></li>
