--- a/app/views/dispos/statistics.html.erb
+++ b/app/views/dispos/statistics.html.erb
@@ -20,13 +20,19 @@
 		    </li>
 		    </ul>
 			  </h2>			
- 	Nombre de jours ouvrés : <% bday = calculate_working_days(@day_first, @day_last, @weekdays).round %> <%= bday %><br />
+ 	Nombre total de jours ouvrés du mois: <% bday = calculate_working_days(@day_first, @day_last, @weekdays).round %> <%= bday %><br />
+ 	Nombre de jours travaillés du mois jusqu'à aujourd'hui :  <% jour_travaille = calculate_working_days(@day_first, @date, @weekdays).round %> <%= jour_travaille %><br />
+
 	Nombre de collaborateurs inscrits : <%= collab = User.all.count %><br />
 	<% total_bday = (collab-1) * bday #on enleve l'admin %>
+	<% current_bday = (collab-1) * jour_travaille #on enleve l'admin %>
 	<% mission = nbre_mission("En mission") %>	<br />
 	
-	<% tx_libre = nbre_not_mission(total_bday,nbre_mission("Congés"),nbre_mission("Formation"),nbre_mission("Disponible"))%>
-	Taux de production du mois en cours: <strong><%= tx_production(mission,tx_libre) %></strong>
+	<% tx_prev = nbre_not_mission(total_bday,nbre_mission("Congés"),nbre_mission("Formation"),nbre_mission("Disponible")) %>
+	<% tx_actu = nbre_not_mission(current_bday,nbre_mission("Congés"),nbre_mission("Formation"),nbre_mission("Disponible"))%>
+	
+	Taux de production en cours : <strong><%= tx_production(mission,tx_actu) %></strong> <br /> 
+	Taux de production du mois prévisionnel : <strong><%= tx_production(mission,tx_prev) %></strong>
 
 
 	<% @statuts.each do |statut| %>
