--- a/app/views/dispos/user_stats.html.erb
+++ b/app/views/dispos/user_stats.html.erb
@@ -21,11 +21,15 @@
 		    </ul>
 			  </h2>	
   	   <% bday = calculate_working_days(@day_first, @day_last, @weekdays).round %>
+	   <% jour_travaille = calculate_working_days(@day_first, @date, @weekdays).round %>
 	<i><%= current_user.first_name %>, quelques indicateurs sur ton activité... </i><br />
 	<% mission = user_nbre_mission("En mission") %>	<br />
 	
 	<% tx_libre = nbre_not_mission(bday,user_nbre_mission("Congés"),user_nbre_mission("Formation"),user_nbre_mission("Disponible"))%>
-	Ton taux de production du mois en cours: <strong><%= tx_production(mission,tx_libre) %></strong>
+	<% tx_actu = nbre_not_mission(bday,nbre_mission("Congés"),nbre_mission("Formation"),nbre_mission("Disponible"))%>
+	
+	Ton taux de production en cours : <strong><%= tx_production(mission,tx_actu) %></strong> <br /> 
+	Ton taux de production prévisionnel sur le mois: <strong><%= tx_production(mission,tx_libre) %></strong>
 
 
 	<% @statuts.each do |statut| %>
