--- a/app/views/dispos/statistics.html.erb
+++ b/app/views/dispos/statistics.html.erb
@@ -14,7 +14,7 @@
 		    <li class="previous">
 		    <%= link_to '«', :month => (@date.prev_month-1) %>
 		    </li>
-		<%=h @date.strftime("%B %Y") %>
+		<%=h l @date, :format => "%B %Y" %>
 		    <li class="next">
 		   	<%= link_to "»", :month => (@date.next_month+1) %>
 		    </li>
@@ -24,8 +24,8 @@
  	Nombre de jours travaillés du mois jusqu'à aujourd'hui :  <% jour_travaille = calculate_working_days(@day_first, @date, @weekdays).round %> <%= jour_travaille %><br />
 
 	Nombre de collaborateurs inscrits : <%= collab = User.all.count %><br />
-	<% total_bday = (collab-1) * bday #on enleve l'admin %>
-	<% current_bday = (collab-1) * jour_travaille #on enleve l'admin %>
+	<% total_bday = (collab) * bday #on enleve l'admin %>
+	<% current_bday = (collab) * jour_travaille #on enleve l'admin %>
 	<% mission = nbre_mission("En mission") %>	<br />
 	
 	<% tx_prev = nbre_not_mission(total_bday,nbre_mission("Congés"),nbre_mission("Formation"),nbre_mission("Disponible")) %>
