gestion des propales

--- a/app/views/dispos/user_stats.html.erb
+++ b/app/views/dispos/user_stats.html.erb
@@ -25,8 +25,8 @@
 	<i><%= current_user.first_name %>, quelques indicateurs sur ton activité... </i><br />
 	<% mission = user_nbre_mission("En mission") %>	<br />
 	
-	<% tx_libre = nbre_not_mission(bday,user_nbre_mission("Congés"),user_nbre_mission("Formation"),user_nbre_mission("Disponible"))%>
-	<% tx_actu = nbre_not_mission(bday,nbre_mission("Congés"),nbre_mission("Formation"),nbre_mission("Disponible"))%>
+	<% tx_libre = nbre_not_mission(bday,user_nbre_mission("Congés"),user_nbre_mission("Formation"),user_nbre_mission("Disponible"),user_nbre_mission("Propale"))%>
+	<% tx_actu = nbre_not_mission(bday,nbre_mission("Congés"),nbre_mission("Formation"),nbre_mission("Disponible"),user_nbre_mission("Propale"))%>
 	
 	Ton taux de production en cours : <strong><%= tx_production(mission,tx_actu) %></strong> <br /> 
 	Ton taux de production prévisionnel sur le mois: <strong><%= tx_production(mission,tx_libre) %></strong>
