Ajout de la langue française dans devise et modification de la page de remplissage des dispos pour prendre en compte les weekends plus simplement

--- a/app/views/dispos/_form.html.erb
+++ b/app/views/dispos/_form.html.erb
@@ -69,9 +69,20 @@
 			<div class ="control-group">
 			<div id="next_days" class="btn-group">
 				</br >
-				<%= link_to '«', new_dispo_path(:day => @dispo.jour.yesterday.to_date), :class => "btn" %>
+ 				<% if @dispo.jour.wday == 1 %>
+                                        <%= link_to '«', new_dispo_path(:day => @dispo.jour.to_date-3), :class => "btn" %>
+                                <% else %> 
+                                        <%= link_to '«', new_dispo_path(:day => @dispo.jour.yesterday.to_date), :class => "btn" %>
+                                <% end %>
+
 				<button class="btn"><%= l ajd, :format => "%a %d %b" %></button>
-				<%= link_to '»' , new_dispo_path(:day => @dispo.jour.tomorrow.to_date), :class => "btn" %>
+
+                                <% if @dispo.jour.wday == 5 %>
+                                        <%= link_to '»' , new_dispo_path(:day => @dispo.jour.to_date+3), :class => "btn" %>
+                                <% else %>
+                                        <%= link_to '»' , new_dispo_path(:day =>@dispo.jour.tomorrow.to_date), :class => "btn" %>
+                                <% end %>
+
 			</div>
 			</div>
 		</div>
