--- a/app/views/dispos/_form.html.erb
+++ b/app/views/dispos/_form.html.erb
@@ -29,7 +29,7 @@
 				</div>
 				<div id="next_days" class="btn-group">
 					<%= link_to '«', new_dispo_path(:day => @dispo.jour.yesterday.to_date), :class => "btn" %>
-					<button class="btn"><%= ajd.to_time.strftime("%a %d %b") %></button>
+					<button class="btn"><%= l ajd, :format => "%A %d %B" %></button>
 					<%= link_to '»' , new_dispo_path(:day => @dispo.jour.tomorrow.to_date), :class => "btn" %>
 				</div>
 		<% end %>
