--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Bonjour <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password, and you can do this through the link below.</p>
+<p>Une demande de réinitialisation de votre mot de passe vient d'être envoyé. Vous pouvez donc changer votre mot de passe en cliquant sur le lien ci-dessous:</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+<p><%= link_to 'Changer mon mot de passe', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Si vous n'avez pas demandé à changer de mot de passe, merci d'ignorer cet e-mail.</p>
+<p>Votre mot de passe ne sera pas modifié tant que vous n'aurez pas accédé au lien ci-dessus.</p>
