--- a/app/views/digest_mailer/digest_email.html.erb
+++ b/app/views/digest_mailer/digest_email.html.erb
@@ -11,6 +11,6 @@
     <p>
       <a href="http://www.mystaff.in">Je remplis mon timesheet</a>
     </p>
-    <p>Passe une bonne journée !</p>
+    <p>Passe une bonne journée ! -- CECI EST UN TEST --</p>
   </body>
 </html>
