--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -78,3 +78,23 @@
 		</p>
 	</div>	
 </div>
+<!-- div class="row-fluid">
+	<div class="span4">
+	<ul class="thumbnails">
+	  <li>
+			<a href="#">
+				<%= image_tag "securite.png" %>
+			</a>
+		</li>
+	</ul>
+	</div>
+	<div class="span4">
+		<ul class="thumbnails">
+		  <li>
+			<a href="#">
+				<%= image_tag "statistiques.png" %>
+			</a>
+		  </li>
+		</ul>
+		</div>
+</div -->
