--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Bienvenu <%= @resource.email %>!</p>
+<p>Bienvenue <%= @resource.email %>!</p>
 
 <p>Vous pouvez-confirmez votre inscription en cliquant sur le lien ci-dessous :</p>
 
