--- a/app/views/devise/mailer/digest_email.html.erb
+++ b/app/views/devise/mailer/digest_email.html.erb
@@ -4,13 +4,18 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Bonjour <%= @user.name %></h1>
+   	Bonjour <%= @name %>,
     <p>
-      Pense à saisir ton TimeSheet !!!
+      J'espère que tu as passé un bon week-end !
     </p>
+<p>Nous sommes lundi. Pense à remplir ton TimeSheet de la semaine !<p/>
     <p>
-      <a href="http://www.mystaff.in">Je remplis mon timesheet</a>
+      <a href="http://www.mystaff.in">Je remplis mon timesheet</a> (lien accessible depuis un ordinateur ou un smartphone)
     </p>
-    <p>Passe une bonne journée ! -- CECI EST UN TEST --</p>
+    <p>Passe une bonne journée !</p>
+<p>A bientôt, <br />
+L'équipe MyStaff.in<br />
+http://www.mystaff.in
+</p>
   </body>
 </html>
