--- a/app/views/devise/mailer/digest_email.text.erb
+++ b/app/views/devise/mailer/digest_email.text.erb
@@ -1,7 +1,7 @@
-Bienvenue <%= @user.name %>
+Bonjour <%= @name %>
 ===============================================
  
-Pense à saisir ton TimeSheet !!!
+Pense à saisir ton TimeSheet !
 
 Je remplis mon timesheet sur http://www.mystaff.in
  
