--- a/app/views/dispos/synthese.html.erb
+++ b/app/views/dispos/synthese.html.erb
@@ -11,8 +11,8 @@
       <ul>
         <% for dispo in dispos %>	
           		<li><span class="<%= dispo.statut.color %>"><%= dispo.statut.name %></span>	
-      				<%= link_to dispo, options = { :confirm => 'Supprimer cette valeur ?', :method => :delete, :title => "Supprimer cette valeur", :rel => "tooltip"} do %>
-					<i class="icon-remove" title="Supprimer cette valeur"></i>
+      				<%= link_to dispo, options = {:confirm => 'Supprimer cette valeur ?', :method => :delete } do %>
+					<i rel="tooltip" title="Supprimer cette valeur" class="icon-remove"></i>
 					<% end %>
 				</li>
 				<li>
@@ -21,7 +21,7 @@
         <% end %>
 		<li>
 			<% if not user_is_dispo(date)  %>
-				<%= link_to new_dispo_path(:date => date), options = {:title => "Ajouter une dispo", :rel => "tooltip"} do %> <i class="icon-plus"></i><% end %>
+				<%= link_to new_dispo_path(:day => date), html_options = {:title => "Ajouter une dispo", :rel => "tooltip"} do %> <i class="icon-plus"></i><% end %>
 			<% end %>
 		</li>
 	<% #end %>
