--- a/app/views/dispos/statistics.html.erb
+++ b/app/views/dispos/statistics.html.erb
@@ -34,7 +34,8 @@
 	<% tx_prev = nbre_not_mission(total_bday,nbre_mission("Congés"),nbre_mission("Formation"),nbre_current_mission("Autre")) %>
 	<% tx_actu = nbre_not_mission(current_bday,nbre_current_mission("Congés"),nbre_current_mission("Formation"),nbre_current_mission("Autre"))%>
 	
-	Taux de production en cours : <strong><%= tx_production(current_mission,tx_actu) %></strong> <br /> 
+	Taux de production en cours : <strong><%= tx_production(current_mission,tx_actu) %></strong> <a href="#" rel="tooltip" title="(Nombre de jours en mission)/(Nombre jours ouvrés - Nombre de jours de formation - Nombre de jours de congés - Nombre de jours autre)"><i class="icon-question-sign"></i></a><br /> 
+	<hr />
 	Taux de production du mois prévisionnel : <strong><%= tx_production(mission,tx_prev) %></strong>
 
 
